# flathub-stats

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flathub-access.conf  flathub.py  generate-test-data.py  process-logs.sh  pyproject.toml  test-run.sh  update-stats.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
tests/: README.md  test_general.py  test_snapshots.py
tests/__snapshots__/: test_snapshots.ambr
tests/__snapshots__/test_stats_with_seed_123/: test_snapshots.ambr
tests/__snapshots__/test_stats_with_seed_42/: test_snapshots.ambr
tests/__snapshots__/test_stats_with_seed_999_small_dataset/: test_snapshots.ambr
