[tool.poetry]
name = "flathub-stats"
version = "0.1.0"
description = ""
authors = ["Bartłomiej Piotrowski <bpiotrowski@gnome.org>", "Kolja Lampe <razzeee@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.48.2"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
faker = "^36.1.1"

[tool.ruff]
lint.ignore = ["E501", "E402"]
lint.extend-select = ["I", "W", "UP", "TCH", "SIM"]
