[project]
name = "flathub-stats"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "argparse>=1.4.0",
    "pygobject==3.48.2",
]

[dependency-groups]
dev = [
    "faker>=37.0.0",
    "ruff>=0.11.0",
    "ty>=0.0.3",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "syrupy>=4.0.0",
]
